<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/colorBlack"/>

        <RadioGroup
            android:id="@+id/rg_category"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/rg_category_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/button_meat" />

            <RadioButton
                android:id="@+id/rg_category_vegetable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_vegetable" />

            <RadioButton
                android:id="@+id/rg_category_mix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_mix" />

            <RadioButton
                android:id="@+id/rg_category_soup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_soup" />
        </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_below="@+id/rg_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/colorBlack"/>

    <RadioGroup
        android:id="@+id/rg_number"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/rg_number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="1" />

        <RadioButton
            android:id="@+id/rg_number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />

        <RadioButton
            android:id="@+id/rg_number_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />

        <RadioButton
            android:id="@+id/rg_number_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />
    </RadioGroup>

    <ListView
        android:layout_below="@+id/rg_number"
        android:id="@+id/tv_menu_generated"
        android:layout_width="match_parent"
        android:layout_height="250dp"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tv_menu_generated">

        <Button
            android:id="@+id/id_btn_generator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/str_generator"
            android:textColor="@color/colorWhite" />
    </LinearLayout>




</RelativeLayout >